--- a/findmenow/package.json
+++ b/findmenow/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "better-auth": "^1.3.4",
     "firebase": "^10.14.1",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
